--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Document</title>
 </head>
 <link rel="stylesheet" href="css/estilos.css">
@@ -15,6 +16,14 @@
 
     </form>
     <script src="JS/main.js">
-    </script>
+    </script><br>
+    <br>
+
+    <a href="creadorDiv.html">IR AL creadorDiv DE LOS CAPOS</a><br>
+
+    <br>
+    <br>
+
+    <a href="tabla.html">IR A LA TABLA DE PAPUS</a><br>
 </body>
 </html>
